# TTB-Label-Verification-App

./: .dockerignore  .env.example  .gitignore  .railwayignore  AGENTS.md  Dockerfile  PHASE_2_SUMMARY.md  PHASE_2_VERIFICATION.md  README.md  railway.toml  replacements.txt
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  comparison.py  config.py  extraction_postprocess.py  main.py  models.py  preprocessing.py  vision_service.py
backend/scripts/: benchmark_live.py  benchmark_preprocessing.py  live_check.py  phase6_live_checklist.py  test_extraction.py
backend/tests/: __init__.py  test_comparison.py  test_config.py  test_extraction_postprocess.py  test_main.py  test_phase6_hardening.py  test_vision_service.py
frontend/: app.js  batch-ui.js  index.html  styles.css
repo.git/: config  packed-refs
repo.git/filter-repo/: commit-map  ref-map
repo.git/info/: refs
repo.git/objects/info/: commit-graph  packs
repo.git/objects/pack/: pack-da9b425fe9395f3ac1136c534b5218a0f3f6bab0.bitmap  pack-da9b425fe9395f3ac1136c534b5218a0f3f6bab0.idx  pack-da9b425fe9395f3ac1136c534b5218a0f3f6bab0.pack  pack-da9b425fe9395f3ac1136c534b5218a0f3f6bab0.rev
