[project]
name = "ttb-label-verification-app"
version = "0.1.0"
description = "Minimal FastAPI backend for the TTB Label Verification proof-of-concept."
requires-python = ">=3.12,<4.0"
readme = "../README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.23.0,<0.24.0",
    "python-multipart>=0.0.9,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "rapidfuzz>=3.0.0,<4.0.0",
    "openai>=1.0.0,<2.0.0",
    "pillow>=10.0.0,<11.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
